--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "server": "node built/server/main.js",
     "gulp": "gulp --gulpfile built/scripts/gulp/gulpfile.js --cwd ./",
     "clean-watch": "sh scripts/clean.sh",
-    "ggg":"gulp move-client-others --gulpfile built/scripts/gulp/gulpfile.js --cwd ./"
+    "ggg": "gulp move-client-others --gulpfile built/scripts/gulp/gulpfile.js --cwd ./"
   },
   "repository": {
     "type": "git",
@@ -27,25 +27,33 @@
   "devDependencies": {
     "autoprefixer-loader": "^3.2.0",
     "css-loader": "^0.23.1",
+    "css-path-loader": "^1.0.1",
+    "file-loader": "^0.9.0",
     "gulp": "^3.9.1",
     "gulp-cached": "^1.1.0",
     "gulp-nodemon": "^2.1.0",
     "gulp-typescript": "^2.13.6",
+    "html-path-loader": "^0.1.12",
+    "json-loader": "^0.5.4",
     "react-hot-loader": "^1.3.0",
     "sass-loader": "^4.0.0",
     "style-loader": "^0.13.1",
+    "text-loader": "0.0.1",
     "typescript": "^1.8.10",
+    "url-loader": "^0.5.7",
     "webpack": "^1.13.2",
     "webpack-dev-server": "^1.14.1"
   },
   "dependencies": {
+    "fit-auto-bind": "^1.0.15",
+    "fit-gaea": "^1.0.26",
     "koa": "^1.2.1",
     "koa-static-cache": "^3.1.7",
     "mobx": "^2.4.3",
     "mobx-react": "^3.5.5",
     "react": "^15.3.1",
     "react-dom": "^15.3.1",
-    "react-native": "^0.32.0-rc.0",
+    "react-native-web": "0.0.44",
     "react-router": "^2.7.0"
   }
 }
