--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "server": "node built/server/main.js",
     "gulp": "gulp --gulpfile built/scripts/gulp/gulpfile.js --cwd ./",
     "clean-watch": "sh scripts/clean.sh",
-    "ggg": "gulp move-client-others --gulpfile built/scripts/gulp/gulpfile.js --cwd ./"
+    "manage": "node built/scripts/manage/index.js"
   },
   "repository": {
     "type": "git",
@@ -26,6 +26,7 @@
   "license": "ISC",
   "devDependencies": {
     "autoprefixer-loader": "^3.2.0",
+    "commander": "^2.9.0",
     "css-loader": "^0.23.1",
     "css-path-loader": "^1.0.1",
     "file-loader": "^0.9.0",
