--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "license": "ISC",
   "devDependencies": {
     "autoprefixer-loader": "^3.2.0",
+    "colors": "^1.1.2",
     "commander": "^2.9.0",
     "css-loader": "^0.23.1",
     "css-path-loader": "^1.0.1",
