增加生产环境打包npm脚本

--- a/package.json
+++ b/package.json
@@ -6,12 +6,16 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start-before": "npm run tsc && npm run dll",
+    "start-before-production": "npm run tsc && npm run dll",
     "start": "npm run gulp & npm run client-build",
     "tsc": "rm -rf built && tsc",
     "dll": "webpack --config built/scripts/webpack/webpack.dll.config.js",
+    "dll-production": "webpack --config built/scripts/webpack/webpack.dll.production.config.js",
     "client-build": "node built/scripts/webpack/webpack-server.js",
+    "client-build-production": "webpack --config built/scripts/webpack/webpack.production.config.js",
     "server": "node built/server/main.js",
     "gulp": "gulp --gulpfile built/scripts/gulp/gulpfile.js --cwd ./",
+    "gulp-production": "gulp production --gulpfile built/scripts/gulp/gulpfile.js --cwd ./",
     "clean-watch": "sh scripts/clean.sh",
     "manage": "node built/scripts/manage/index.js"
   },
@@ -26,10 +30,20 @@
   "license": "ISC",
   "devDependencies": {
     "autoprefixer-loader": "^3.2.0",
+    "babel-core": "^6.14.0",
+    "babel-loader": "^6.2.5",
+    "babel-plugin-array-includes": "^2.0.3",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-plugin-transform-object-assign": "^6.8.0",
+    "babel-plugin-transform-runtime": "^6.12.0",
+    "babel-preset-airbnb": "^2.0.0",
+    "babel-preset-es2015": "^6.14.0",
+    "babel-preset-stage-0": "^6.5.0",
     "colors": "^1.1.2",
     "commander": "^2.9.0",
     "css-loader": "^0.23.1",
     "css-path-loader": "^1.0.1",
+    "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
     "gulp": "^3.9.1",
     "gulp-cached": "^1.1.0",
@@ -48,7 +62,9 @@
   },
   "dependencies": {
     "fit-auto-bind": "^1.0.15",
-    "fit-gaea": "^1.0.26",
+    "fit-gaea": "^1.0.35",
+    "fit-gaea-native-components": "^1.0.6",
+    "fit-gaea-preview": "^1.0.4",
     "koa": "^1.2.1",
     "koa-static-cache": "^3.1.7",
     "mobx": "^2.4.3",
