--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "css-path-loader": "^1.0.1",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
+    "format-json": "^1.0.3",
     "gulp": "^3.9.1",
     "gulp-cached": "^1.1.0",
     "gulp-nodemon": "^2.1.0",
@@ -53,6 +54,7 @@
     "json-loader": "^0.5.4",
     "react-hot-loader": "^1.3.0",
     "sass-loader": "^4.0.0",
+    "semver": "^5.3.0",
     "style-loader": "^0.13.1",
     "text-loader": "0.0.1",
     "typescript": "^1.8.10",
