--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "author": "huangziyi01",
   "license": "ISC",
   "devDependencies": {
+    "autoprefixer": "^6.4.0",
     "autoprefixer-loader": "^3.2.0",
     "babel-core": "^6.14.0",
     "babel-loader": "^6.2.5",
@@ -52,6 +53,8 @@
     "gulp-typescript": "^2.13.6",
     "html-path-loader": "^0.1.12",
     "json-loader": "^0.5.4",
+    "node-sass": "^3.8.0",
+    "postcss": "^5.1.2",
     "react-hot-loader": "^1.3.0",
     "sass-loader": "^4.0.0",
     "semver": "^5.3.0",
