--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "semver": "^5.3.0",
     "style-loader": "^0.13.1",
     "text-loader": "0.0.1",
+    "tty-table": "^2.1.0",
     "typescript": "^1.8.10",
     "url-loader": "^0.5.7",
     "webpack": "^1.13.2",
