--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "json-loader": "^0.5.4",
     "node-sass": "^3.8.0",
     "postcss": "^5.1.2",
+    "prompt": "^1.0.0",
     "react-hot-loader": "^1.3.0",
     "sass-loader": "^4.0.0",
     "semver": "^5.3.0",
