--- a/package.json
+++ b/package.json
@@ -11,5 +11,9 @@
     "navbar"
   ],
   "author": "ascoders",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {},
+  "peerDependencies": {
+    "react": "^0.31.0"
+  }
 }
