--- a/components/wefan/navbar/package.json
+++ b/components/wefan/navbar/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {},
   "peerDependencies": {
-    "react": "^0.31.0"
+    "react": "^0.14.0 || ^15.0.0",
+    "react-native": "^0.31.0"
   }
 }
