--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "nt-wefan-navbar": "^1.0.0"
   },
   "peerDependencies": {
-    "react": "^0.31.0"
+    "react": "^0.14.0 || ^15.0.0",
+    "react-native": "^0.31.0"
   }
 }
