--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
     "format-json": "^1.0.3",
+    "fs-extra": "^0.30.0",
     "gulp": "^3.9.1",
     "gulp-cached": "^1.1.0",
     "gulp-nodemon": "^2.1.0",
