--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "colors": "^1.1.2",
     "commander": "^2.9.0",
     "css-loader": "^0.23.1",
-    "css-path-loader": "^1.0.1",
+    "css-path-loader": "^0.2.17",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
     "format-json": "^1.0.3",
@@ -70,11 +70,13 @@
   },
   "dependencies": {
     "fit-auto-bind": "^1.0.15",
+    "fit-bluekit": "0.0.39",
     "fit-button": "^3.1.47",
     "fit-gaea": "^1.0.37",
     "fit-gaea-native-components": "^1.0.7",
     "fit-gaea-preview": "^1.0.4",
     "fit-gaea-web-components": "^1.0.5",
+    "font-awesome": "^4.6.3",
     "koa": "^1.2.1",
     "koa-static-cache": "^3.1.7",
     "mobx": "^2.4.3",
