--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start-before": "npm run tsc && npm run dll",
-    "start-before-production": "npm run tsc && npm run dll",
+    "start-before-production": "npm run tsc && npm run dll-production",
     "start": "npm run gulp & npm run client-build",
     "tsc": "rm -rf built && tsc",
     "dll": "webpack --config built/scripts/webpack/webpack.dll.config.js",
@@ -14,6 +14,7 @@
     "client-build": "node built/scripts/webpack/webpack-server.js",
     "client-build-production": "webpack --config built/scripts/webpack/webpack.production.config.js",
     "server": "node built/server/main.js",
+    "server-production": "node built/server/main.js --production",
     "gulp": "gulp --gulpfile built/scripts/gulp/gulpfile.js --cwd ./",
     "gulp-production": "gulp production --gulpfile built/scripts/gulp/gulpfile.js --cwd ./",
     "clean-watch": "sh scripts/clean.sh",
