--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "fit-gaea-web-components": "^1.0.5",
     "fit-message": "^3.0.29",
     "fit-modal": "^3.0.58",
+    "fit-scroll-listen": "^3.0.43",
     "font-awesome": "^4.6.3",
     "highlight.js": "^9.6.0",
     "koa": "^1.2.1",
@@ -90,6 +91,7 @@
     "mobx": "^2.4.3",
     "mobx-react": "^3.5.5",
     "react": "^15.3.1",
+    "react-copy-to-clipboard": "^4.2.3",
     "react-dom": "^15.3.1",
     "react-native-web": "0.0.44",
     "react-router": "^2.7.0",
