--- a/components/common/tooltip/package.json
+++ b/components/common/tooltip/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nt-tooltip",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "description": "工具提示",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
@@ -13,6 +13,11 @@
   ],
   "author": "ascoders",
   "license": "ISC",
-  "dependencies": {},
-  "peerDependencies": {}
+  "dependencies": {
+    "mobx-react": "^3.5.5"
+  },
+  "peerDependencies": {
+    "react": "^0.14.0 || ^15.0.0",
+    "react-dom": "^0.14.0 || ^15.0.0"
+  }
 }
