--- a/package.json
+++ b/package.json
@@ -73,8 +73,9 @@
   "dependencies": {
     "classnames": "^2.2.5",
     "fit-auto-bind": "^1.0.15",
-    "fit-gaea": "^1.0.38",
-    "fit-gaea-native-components": "^1.0.7",
+    "fit-checkbox": "^3.0.32",
+    "fit-gaea": "^1.0.39",
+    "fit-gaea-native-components": "^1.0.8",
     "fit-gaea-preview": "^1.0.4",
     "fit-gaea-web-components": "^1.0.5",
     "fit-message": "^3.0.29",
@@ -89,10 +90,10 @@
     "lodash": "^4.15.0",
     "mobx": "^2.4.3",
     "mobx-react": "^3.5.5",
+    "nt-react-native-web": "^0.0.48",
     "react": "^15.3.1",
     "react-copy-to-clipboard": "^4.2.3",
     "react-dom": "^15.3.1",
-    "react-native-web": "0.0.44",
     "react-router": "^2.7.0",
     "request": "^2.74.0",
     "superagent": "^2.2.0"
