--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nt-button",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "按钮",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
@@ -14,8 +14,7 @@
   "author": "ascoders",
   "license": "ISC",
   "dependencies": {
-    "classnames": "^2.2.5",
-    "mobx-react": "^3.5.5"
+    "classnames": "^2.2.5"
   },
   "peerDependencies": {
     "react": "^0.14.0 || ^15.0.0",
