--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nt-image",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "图片",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
@@ -13,9 +13,7 @@
   ],
   "author": "ascoders",
   "license": "ISC",
-  "dependencies": {
-    "mobx-react": "^3.5.5"
-  },
+  "dependencies": {},
   "peerDependencies": {
     "react": "^0.14.0 || ^15.0.0",
     "react-native": "^0.29.0"
