--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nt-gif",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "GIF",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
@@ -14,7 +14,8 @@
   "author": "ascoders",
   "license": "ISC",
   "dependencies": {
-    "nt-image": "^0.0.3"
+    "nt-image": "^0.0.2",
+    "nt-transmit-transparently": "^0.0.1"
   },
   "peerDependencies": {
     "react": "^0.14.0 || ^15.0.0",
