--- a/package.json
+++ b/package.json
@@ -74,15 +74,14 @@
     "classnames": "^2.2.5",
     "fit-auto-bind": "^1.0.15",
     "fit-checkbox": "^3.0.32",
-    "fit-gaea": "^1.0.39",
+    "fit-gaea": "^1.0.44",
     "fit-gaea-native-components": "^1.0.8",
-    "fit-gaea-preview": "^1.0.4",
-    "fit-gaea-web-components": "^1.0.5",
+    "fit-gaea-web-components": "^1.0.9",
     "fit-message": "^3.0.29",
     "fit-modal": "^3.0.58",
-    "fit-scroll-listen": "^3.0.43",
     "font-awesome": "^4.6.3",
     "highlight.js": "^9.6.0",
+    "jquery": "^3.1.0",
     "koa": "^1.2.1",
     "koa-proxy": "^0.6.0",
     "koa-router": "^5.4.0",
