--- a/components/common/image-zoom/package.json
+++ b/components/common/image-zoom/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-native-image-pan-zoom",
-  "version": "0.0.2",
+  "version": "1.0.0",
   "description": "图片手势操作",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
@@ -13,9 +13,11 @@
   ],
   "author": "ascoders",
   "license": "ISC",
-  "dependencies": {},
+  "dependencies": {
+    "nt-auto-bind": "^1.0.0"
+  },
   "peerDependencies": {
     "react": "^0.14.0 || ^15.0.0",
-    "react-native": "^0.32.0"
+    "react-native": "^0.33.0"
   }
 }
