--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nt-web-margin-padding-editor",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "内/外边距编辑器",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
@@ -19,7 +19,6 @@
   },
   "peerDependencies": {
     "react": "^0.14.0 || ^15.0.0",
-    "react-dom": "^0.14.0 || ^15.0.0",
-    "react-native": "^0.33.0"
+    "react-dom": "^0.14.0 || ^15.0.0"
   }
 }
