--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nt-auto-bind",
-  "version": "1.0.1",
+  "version": "2.0.0",
   "description": "自动绑定",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
@@ -15,7 +15,6 @@
   "license": "ISC",
   "dependencies": {},
   "peerDependencies": {
-    "react": "^0.14.0 || ^15.0.0",
-    "react-native": "^0.33.0"
+    "react": "^0.14.0 || ^15.0.0"
   }
 }
