--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
   },
   "dependencies": {
     "classnames": "^2.2.5",
+    "css-animation": "^1.3.0",
     "fit-auto-bind": "^1.0.15",
     "fit-checkbox": "^3.0.32",
     "fit-gaea": "^1.0.48",
@@ -92,6 +93,7 @@
     "mobx-react": "^3.5.5",
     "nt-react-native-web": "^0.0.52",
     "nt-web-margin-padding-editor": "^1.1.1",
+    "rc-animate": "^2.3.1",
     "react": "^15.3.1",
     "react-copy-to-clipboard": "^4.2.3",
     "react-dom": "^15.3.1",
