--- a/components/web-common/badge/package.json
+++ b/components/web-common/badge/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nt-web-badge",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "description": "徽标",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
@@ -13,6 +13,13 @@
   ],
   "author": "ascoders",
   "license": "ISC",
-  "dependencies": {},
-  "peerDependencies": {}
+  "dependencies": {
+    "classnames": "^2.2.5",
+    "nt-transmit-transparently": "^1.0.2",
+    "rc-animate": "^2.3.1",
+    "css-animation": "^1.3.0"
+  },
+  "peerDependencies": {
+    "react": "^0.14.0 || ^15.0.0"
+  }
 }
