--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
     "lodash": "^4.15.0",
     "mobx": "^2.4.3",
     "mobx-react": "^3.5.5",
+    "moment": "^2.15.0",
     "nt-react-native-web": "^0.0.52",
     "nt-web-margin-padding-editor": "^1.1.1",
     "rc-animate": "^2.3.1",
