--- a/package.json
+++ b/package.json
@@ -100,6 +100,7 @@
     "react-dom": "^15.3.1",
     "react-router": "^2.7.0",
     "request": "^2.74.0",
-    "superagent": "^2.2.0"
+    "superagent": "^2.2.0",
+    "validator": "^5.7.0"
   }
 }
