--- a/components/web-common/checkbox/package.json
+++ b/components/web-common/checkbox/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nt-web-checkbox",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "description": "多选框",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
@@ -13,6 +13,11 @@
   ],
   "author": "ascoders",
   "license": "ISC",
-  "dependencies": {},
-  "peerDependencies": {}
+  "dependencies": {
+    "classnames": "^2.2.5",
+    "nt-transmit-transparently": "^1.0.2"
+  },
+  "peerDependencies": {
+    "react": "^0.14.0 || ^15.0.0"
+  }
 }
