--- a/components/web-common/collapse/package.json
+++ b/components/web-common/collapse/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nt-web-collapse",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "手风琴",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
@@ -14,6 +14,7 @@
   "author": "ascoders",
   "license": "ISC",
   "dependencies": {
+    "jquery": "^3.1.0",
     "classnames": "^2.2.5",
     "nt-transmit-transparently": "^1.0.2"
   },
