--- a/components/web-common/tabs/package.json
+++ b/components/web-common/tabs/package.json
@@ -1,25 +1,25 @@
 {
-  "name": "react-native-image-zoom-viewer",
-  "version": "1.2.1",
-  "description": "大图浏览",
+  "name": "nt-web-tabs",
+  "version": "1.0.0",
+  "description": "标签页",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
   "repository": {
     "type": "git",
-    "url": "https://github.com/ascoders/react-native-image-viewer.git"
+    "url": "https://github.com/next-component/web-common-tabs.git"
   },
   "keywords": [
-    "image-viewer"
+    "tabs"
   ],
   "author": "ascoders",
   "license": "ISC",
   "dependencies": {
-    "nt-auto-bind": "^2.0.0",
+    "classnames": "^2.2.5",
     "nt-transmit-transparently": "^1.0.2",
-    "react-native-image-pan-zoom": "^1.1.0"
+    "jquery": "^3.1.0"
   },
   "peerDependencies": {
     "react": "^0.14.0 || ^15.0.0",
-    "react-native": "^0.33.0"
+    "react-dom": "^0.14.0 || ^15.0.0"
   }
 }
