--- a/package.json
+++ b/package.json
@@ -1,21 +1,23 @@
 {
-    "name": "nt-web-tree",
-    "version": "0.0.1",
-    "description": "折叠树",
-    "main": "lib/index.js",
-    "typings": "lib/index.d.ts",
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/next-component/web-common-tree.git"
-    },
-    "keywords": [
-        "tree"
-    ],
-    "author": "ascoders",
-    "license": "ISC",
-    "dependencies": {},
-    "peerDependencies": {
-        "react": "^0.14.0 || ^15.0.0",
-        "react-native": "^0.33.0"
-    }
+  "name": "nt-web-tree",
+  "version": "1.0.0",
+  "description": "折叠树",
+  "main": "lib/index.js",
+  "typings": "lib/index.d.ts",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/next-component/web-common-tree.git"
+  },
+  "keywords": [
+    "tree"
+  ],
+  "author": "ascoders",
+  "license": "ISC",
+  "dependencies": {
+    "classnames": "^2.2.5",
+    "nt-transmit-transparently": "^1.0.2"
+  },
+  "peerDependencies": {
+    "react": "^0.14.0 || ^15.0.0"
+  }
 }
