--- a/package.json
+++ b/package.json
@@ -1,25 +1,26 @@
 {
-    "name": "nt-web-badge",
-    "version": "1.0.0",
-    "description": "徽标",
-    "main": "lib/index.js",
-    "typings": "lib/index.d.ts",
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/next-component/web-common-badge.git"
-    },
-    "keywords": [
-        "badge"
-    ],
-    "author": "ascoders",
-    "license": "ISC",
-    "dependencies": {
-        "classnames": "^2.2.5",
-        "nt-transmit-transparently": "^1.0.2",
-        "rc-animate": "^2.3.1",
-        "css-animation": "^1.3.0"
-    },
-    "peerDependencies": {
-        "react": "^0.14.0 || ^15.0.0"
-    }
+  "name": "nt-web-badge",
+  "version": "1.0.1",
+  "description": "徽标",
+  "main": "lib/index.js",
+  "typings": "lib/index.d.ts",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/next-component/web-common-badge.git"
+  },
+  "keywords": [
+    "badge"
+  ],
+  "author": "ascoders",
+  "license": "ISC",
+  "dependencies": {
+    "classnames": "^2.2.5",
+    "nt-transmit-transparently": "^1.0.3",
+    "rc-animate": "^2.3.1",
+    "lodash": "^4.15.0",
+    "css-animation": "^1.3.0"
+  },
+  "peerDependencies": {
+    "react": "^0.14.0 || ^15.0.0"
+  }
 }
