--- a/components/web-common/json-tree/package.json
+++ b/components/web-common/json-tree/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nt-web-json-tree",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "json 树",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
@@ -15,8 +15,9 @@
   "license": "ISC",
   "dependencies": {
     "classnames": "^2.2.5",
-    "nt-web-tree": "^1.0.0",
-    "nt-transmit-transparently": "^1.0.2"
+    "nt-web-tree": "^1.0.1",
+    "nt-transmit-transparently": "^1.0.3",
+    "nt-transparently-props": "^0.0.1"
   },
   "peerDependencies": {
     "react": "^0.14.0 || ^15.0.0"
