--- a/components/web-common/radio/package.json
+++ b/components/web-common/radio/package.json
@@ -1,24 +1,25 @@
 {
-    "name": "nt-web-radio",
-    "version": "1.0.0",
-    "description": "单选框",
-    "main": "lib/index.js",
-    "typings": "lib/index.d.ts",
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/next-component/web-common-radio.git"
-    },
-    "keywords": [
-        "radio"
-    ],
-    "author": "ascoders",
-    "license": "ISC",
-    "dependencies": {
-        "classnames": "^2.2.5",
-        "nt-transmit-transparently": "^1.0.2",
-        "nt-web-button": "^1.0.0"
-    },
-    "peerDependencies": {
-        "react": "^0.14.0 || ^15.0.0"
-    }
+  "name": "nt-web-radio",
+  "version": "1.0.1",
+  "description": "单选框",
+  "main": "lib/index.js",
+  "typings": "lib/index.d.ts",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/next-component/web-common-radio.git"
+  },
+  "keywords": [
+    "radio"
+  ],
+  "author": "ascoders",
+  "license": "ISC",
+  "dependencies": {
+    "classnames": "^2.2.5",
+    "nt-transmit-transparently": "^1.0.3",
+    "nt-transparently-props": "^0.0.1",
+    "nt-web-button": "^1.0.1"
+  },
+  "peerDependencies": {
+    "react": "^0.14.0 || ^15.0.0"
+  }
 }
