--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nt-wefan-resource-card",
-  "version": "0.0.28",
+  "version": "0.0.29",
   "description": "资源卡片",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
@@ -16,6 +16,6 @@
   "dependencies": {},
   "peerDependencies": {
     "react": "^0.14.0 || ^15.0.0",
-    "react-native": "^0.33.0"
+    "react-native": "*"
   }
 }
