--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "gulp-typescript": "^2.13.6",
     "html-path-loader": "^0.1.12",
     "json-loader": "^0.5.4",
+    "mobx-react-devtools": "^4.2.6",
     "node-sass": "^3.8.0",
     "postcss": "^5.1.2",
     "prompt": "^1.0.0",
