--- a/components/web-common/number/package.json
+++ b/components/web-common/number/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nt-web-number",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "description": "数字框",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
@@ -13,6 +13,15 @@
   ],
   "author": "ascoders",
   "license": "ISC",
-  "dependencies": {},
-  "peerDependencies": {}
+  "dependencies": {
+    "classnames": "^2.2.5",
+    "nt-web-button": "^1.0.4",
+    "nt-web-input": "^1.0.5",
+    "nt-transmit-transparently": "^1.0.6",
+    "nt-auto-bind": "^2.0.4",
+    "lodash": "^4.15.0"
+  },
+  "peerDependencies": {
+    "react": "^0.14.0 || ^15.0.0"
+  }
 }
