Gaea编辑器新增模板功能

--- a/package.json
+++ b/package.json
@@ -86,18 +86,19 @@
     "koa-router": "^5.4.0",
     "koa-static-cache": "^3.1.7",
     "lodash": "^4.15.0",
+    "lz-string": "^1.4.4",
     "mobx": "^2.4.3",
     "mobx-react": "^3.5.5",
     "moment": "^2.15.0",
     "nt-react-native-web": "^0.0.52",
     "pixi.js": "^4.0.2",
     "rc-animate": "^2.3.1",
-    "react": "^15.3.1",
+    "react": "^15.3.2",
     "react-addons-test-utils": "^15.3.2",
     "react-codemirror": "^0.2.6",
     "react-color": "^2.3.2",
     "react-copy-to-clipboard": "^4.2.3",
-    "react-dom": "^15.3.1",
+    "react-dom": "^15.3.2",
     "react-router": "^2.7.0",
     "request": "^2.74.0",
     "sortablejs": "git://github.com/RubaXa/Sortable.git#dev",
