添加依赖注入

--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
     "style-loader": "^0.13.1",
     "text-loader": "0.0.1",
     "tty-table": "^2.1.0",
-    "typescript": "^1.8.10",
+    "typescript": "^2.1.0-dev.20161011",
     "url-loader": "^0.5.7",
     "webpack": "^1.13.2",
     "webpack-dev-server": "^1.14.1"
@@ -79,6 +79,8 @@
     "fit-checkbox": "^3.0.32",
     "font-awesome": "^4.6.3",
     "highlight.js": "^9.6.0",
+    "inversify": "^2.0.1",
+    "inversify-inject-decorators": "^2.0.0",
     "jquery": "^3.1.0",
     "keymaster": "^1.6.2",
     "koa": "^1.2.1",
@@ -100,6 +102,7 @@
     "react-copy-to-clipboard": "^4.2.3",
     "react-dom": "^15.3.2",
     "react-router": "^2.7.0",
+    "reflect-metadata": "^0.1.8",
     "request": "^2.74.0",
     "sortablejs": "git://github.com/RubaXa/Sortable.git#dev",
     "superagent": "^2.2.0",
