--- a/package.json
+++ b/package.json
@@ -1,112 +1,114 @@
 {
-  "name": "next",
-  "version": "0.1.0",
-  "description": "next-designer",
-  "main": "page/index.tsx",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start-before": "npm run tsc && npm run dll && npm run manage -- --router",
-    "start-before-production": "npm run tsc && npm run dll-production",
-    "start": "npm run gulp & npm run client-build",
-    "tsc": "rm -rf built && tsc",
-    "dll": "webpack --config built/scripts/webpack/webpack.dll.config.js",
-    "dll-production": "webpack --config built/scripts/webpack/webpack.dll.production.config.js",
-    "client-build": "node built/scripts/webpack/webpack-server.js",
-    "client-build-production": "webpack --config built/scripts/webpack/webpack.production.config.js --production",
-    "server": "node built/server/main.js",
-    "server-production": "node built/server/main.js --production",
-    "gulp": "gulp --gulpfile built/scripts/gulp/gulpfile.js --cwd ./",
-    "gulp-production": "gulp production --gulpfile built/scripts/gulp/gulpfile.js --cwd ./",
-    "clean-watch": "sh scripts/clean.sh",
-    "manage": "node built/scripts/manage/index.js",
-    "production": "rm -rf built-production && npm run start-before-production && npm run gulp-production && npm run client-build-production",
-    "clean": "pkill node; pkill gulp; pkill built/server/main.js; pkill built/scripts/webpack/webpack-server.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "http://gitlab.baidu.com/huangziyi01/home.git"
-  },
-  "keywords": [
-    "next"
-  ],
-  "author": "huangziyi01",
-  "license": "ISC",
-  "devDependencies": {
-    "autoprefixer": "^6.4.0",
-    "autoprefixer-loader": "^3.2.0",
-    "babel-core": "^6.14.0",
-    "babel-loader": "^6.2.5",
-    "babel-plugin-array-includes": "^2.0.3",
-    "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-plugin-transform-object-assign": "^6.8.0",
-    "babel-plugin-transform-runtime": "^6.12.0",
-    "babel-preset-airbnb": "^2.0.0",
-    "babel-preset-es2015": "^6.14.0",
-    "babel-preset-stage-0": "^6.5.0",
-    "colors": "^1.1.2",
-    "commander": "^2.9.0",
-    "css-loader": "^0.23.1",
-    "css-path-loader": "^0.2.17",
-    "extract-text-webpack-plugin": "^1.0.1",
-    "file-loader": "^0.9.0",
-    "format-json": "^1.0.3",
-    "fs-extra": "^0.30.0",
-    "gulp": "^3.9.1",
-    "gulp-cached": "^1.1.0",
-    "gulp-nodemon": "^2.1.0",
-    "gulp-typescript": "^2.13.6",
-    "html-path-loader": "^0.1.12",
-    "json-loader": "^0.5.4",
-    "mobx-react-devtools": "^4.2.6",
-    "node-sass": "^3.8.0",
-    "postcss": "^5.1.2",
-    "prompt": "^1.0.0",
-    "react-hot-loader": "^1.3.0",
-    "sass-loader": "^4.0.0",
-    "semver": "^5.3.0",
-    "style-loader": "^0.13.1",
-    "text-loader": "0.0.1",
-    "tty-table": "^2.1.0",
-    "typescript": "^2.1.0-dev.20161011",
-    "url-loader": "^0.5.7",
-    "webpack": "^1.13.2",
-    "webpack-dev-server": "^1.14.1"
-  },
-  "dependencies": {
-    "classnames": "^2.2.5",
-    "codemirror": "^5.19.0",
-    "css-animation": "^1.3.0",
-    "fit-checkbox": "^3.0.32",
-    "font-awesome": "^4.6.3",
-    "highlight.js": "^9.6.0",
-    "inversify": "^2.0.1",
-    "inversify-inject-decorators": "^2.0.0",
-    "jquery": "^3.1.0",
-    "keymaster": "^1.6.2",
-    "koa": "^1.2.1",
-    "koa-proxy": "^0.6.0",
-    "koa-router": "^5.4.0",
-    "koa-static-cache": "^3.1.7",
-    "lodash": "^4.15.0",
-    "lz-string": "^1.4.4",
-    "mobx": "^2.4.3",
-    "mobx-react": "^3.5.5",
-    "moment": "^2.15.0",
-    "nt-react-native-web": "^0.0.52",
-    "pixi.js": "^4.0.2",
-    "rc-animate": "^2.3.1",
-    "react": "^15.3.2",
-    "react-addons-test-utils": "^15.3.2",
-    "react-codemirror": "^0.2.6",
-    "react-color": "^2.3.2",
-    "react-copy-to-clipboard": "^4.2.3",
-    "react-dom": "^15.3.2",
-    "react-dropzone-component": "^1.2.0",
-    "react-router": "^2.7.0",
-    "reflect-metadata": "^0.1.8",
-    "request": "^2.74.0",
-    "sortablejs": "git://github.com/RubaXa/Sortable.git#dev",
-    "superagent": "^2.2.0",
-    "validator": "^5.7.0"
-  }
+    "name": "next",
+    "version": "0.1.0",
+    "description": "next-designer",
+    "main": "page/index.tsx",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "start-before": "npm run tsc && npm run dll && npm run manage -- --router",
+        "start-before-production": "npm run tsc && npm run dll-production",
+        "start": "npm run gulp & npm run client-build",
+        "tsc": "rm -rf built && tsc",
+        "dll": "webpack --config built/scripts/webpack/webpack.dll.config.js",
+        "dll-production": "webpack --config built/scripts/webpack/webpack.dll.production.config.js",
+        "client-build": "node built/scripts/webpack/webpack-server.js",
+        "client-build-production": "webpack --config built/scripts/webpack/webpack.production.config.js --production",
+        "server": "node built/server/main.js",
+        "server-production": "node built/server/main.js --production",
+        "gulp": "gulp --gulpfile built/scripts/gulp/gulpfile.js --cwd ./",
+        "gulp-production": "gulp production --gulpfile built/scripts/gulp/gulpfile.js --cwd ./",
+        "clean-watch": "sh scripts/clean.sh",
+        "manage": "node built/scripts/manage/index.js",
+        "production": "rm -rf built-production && PRODUCTION=1 npm run start-before-production && PRODUCTION=1 npm run gulp-production && PRODUCTION=1 npm run client-build-production",
+        "production-local": "rm -rf built-production && npm run start-before-production && npm run gulp-production && npm run client-build-production",
+        "clean": "pkill node; pkill gulp; pkill built/server/main.js; pkill built/scripts/webpack/webpack-server.js"
+    },
+    "repository": {
+        "type": "git",
+        "url": "http://gitlab.baidu.com/huangziyi01/home.git"
+    },
+    "keywords": [
+        "next"
+    ],
+    "author": "huangziyi01",
+    "license": "ISC",
+    "devDependencies": {
+        "autoprefixer": "^6.4.0",
+        "autoprefixer-loader": "^3.2.0",
+        "babel-core": "^6.14.0",
+        "babel-loader": "^6.2.5",
+        "babel-plugin-array-includes": "^2.0.3",
+        "babel-plugin-transform-decorators-legacy": "^1.3.4",
+        "babel-plugin-transform-object-assign": "^6.8.0",
+        "babel-plugin-transform-runtime": "^6.15.0",
+        "babel-preset-airbnb": "^2.0.0",
+        "babel-preset-es2015": "^6.14.0",
+        "babel-preset-stage-0": "^6.5.0",
+        "colors": "^1.1.2",
+        "commander": "^2.9.0",
+        "css-loader": "^0.23.1",
+        "css-path-loader": "^0.2.17",
+        "extract-text-webpack-plugin": "^1.0.1",
+        "file-loader": "^0.9.0",
+        "format-json": "^1.0.3",
+        "fs-extra": "^0.30.0",
+        "gulp": "^3.9.1",
+        "gulp-cached": "^1.1.0",
+        "gulp-nodemon": "^2.1.0",
+        "gulp-typescript": "^2.13.6",
+        "html-path-loader": "^0.1.12",
+        "json-loader": "^0.5.4",
+        "mobx-react-devtools": "^4.2.6",
+        "node-sass": "^3.8.0",
+        "postcss": "^5.1.2",
+        "prompt": "^1.0.0",
+        "react-hot-loader": "^1.3.0",
+        "sass-loader": "^4.0.0",
+        "semver": "^5.3.0",
+        "style-loader": "^0.13.1",
+        "text-loader": "0.0.1",
+        "tty-table": "^2.1.0",
+        "typescript": "^2.1.0-dev.20161011",
+        "url-loader": "^0.5.7",
+        "webpack": "^1.13.2",
+        "webpack-dev-server": "^1.14.1"
+    },
+    "dependencies": {
+        "babel-runtime": "^6.11.6",
+        "classnames": "^2.2.5",
+        "codemirror": "^5.19.0",
+        "css-animation": "^1.3.0",
+        "fit-checkbox": "^3.0.32",
+        "font-awesome": "^4.6.3",
+        "highlight.js": "^9.6.0",
+        "inversify": "^2.0.1",
+        "inversify-inject-decorators": "^2.0.0",
+        "jquery": "^3.1.0",
+        "keymaster": "^1.6.2",
+        "koa": "^1.2.1",
+        "koa-proxy": "^0.6.0",
+        "koa-router": "^5.4.0",
+        "koa-static-cache": "^3.1.7",
+        "lodash": "^4.15.0",
+        "lz-string": "^1.4.4",
+        "mobx": "^2.4.3",
+        "mobx-react": "^3.5.5",
+        "moment": "^2.15.0",
+        "nt-react-native-web": "^0.0.52",
+        "pixi.js": "^4.0.2",
+        "rc-animate": "^2.3.1",
+        "react": "^15.3.2",
+        "react-addons-test-utils": "^15.3.2",
+        "react-codemirror": "^0.2.6",
+        "react-color": "^2.3.2",
+        "react-copy-to-clipboard": "^4.2.3",
+        "react-dom": "^15.3.2",
+        "react-dropzone-component": "^1.2.0",
+        "react-router": "^2.7.0",
+        "reflect-metadata": "^0.1.8",
+        "request": "^2.74.0",
+        "sortablejs": "git://github.com/RubaXa/Sortable.git#dev",
+        "superagent": "^2.2.0",
+        "validator": "^5.7.0"
+    }
 }
