--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,12 +17,7 @@
         ],
         "moduleResolution": "node",
         "experimentalDecorators": true,
-        "emitDecoratorMetadata": true,
-        "paths": {
-            "nt-auto-bind": [
-                "components/common/auto-bind/index"
-            ]
-        }
+        "emitDecoratorMetadata": true
     },
     "awesomeTypescriptLoaderOptions": {
         "useWebpackText": true,
